Chore: 응답 형식 통일
